Arreglando detalles de redacción y links

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                         <li class="li_tec">BackEnd</li>
                         <div class="competencia_grupo">
                             <div class="img_competencias">
-                                <img src=assets/img/py.jpg" alt="">
+                                <img src="assets/img/py.jpg" alt="">
                                 <h5>Python</h5>
                             </div>
                             <div class="img_competencias">
@@ -441,7 +441,7 @@
             </div>
 
             <div class="column_competencias">
-                <p class="cosa">y no menos importantes . . .</p>
+                <p class="cosa">y no menos importante . . .</p>
                 <h3>PASATIEMPOS</h3>
                 <ul class="ul_pasa">
                     <li class="li_pasa"><img src="assets/img/book.jpg" alt="">Aprender haciendo 💪</li>
