Modificación de diseño

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                     </ul>
                 </h6>
             </nav>
-            <nav class="navbar2">
+            <!-- <nav class="navbar2">
                 <nav class="navbar1">
                     <audio controls autoplay src="assets/audio.mp3">
                     </audio>
-            </nav>
-            </nav>
+                </nav>
+            </nav> -->
         </div>
         
     </section>
